deployer/src/test/resources/iptables-test
# Generated by iptables-save v1.4.21 on Fri May 15 08:03:34 2015
*nat
:PREROUTING ACCEPT [1595868:104383764]
:INPUT ACCEPT [49873:5177807]
:OUTPUT ACCEPT [51914:3290224]
:POSTROUTING ACCEPT [21302:1453504]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
COMMIT
# Completed on Fri May 15 08:03:34 2015
# Generated by iptables-save v1.4.21 on Fri May 15 08:03:34 2015
*filter
:INPUT ACCEPT [195263:44879876]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [145477:101773924]
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -m tcp --sport 3128 -m state --state NEW -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -m tcp --sport 80 -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -m tcp --sport 8081 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -p tcp -m tcp --sport 80 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -p tcp -m tcp --dport 80 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -p tcp -m tcp --dport 443 -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Fri May 15 08:03:34 2015
